--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^3.68",
-    "phpstan/phpstan": "^2.1"
+    "phpstan/phpstan": "^2.1",
+    "phpunit/phpunit": "^11.5"
   },
   "scripts": {
     "cs": [
@@ -30,6 +31,9 @@
     ],
     "phpstan": [
       "phpstan  analyse --level=10 src build"
+    ],
+    "phpunit": [
+      "phpunit tests"
     ]
   }
 }
