--- a/.github/workflows/scheduled-build-2.x.yml
+++ b/.github/workflows/scheduled-build-2.x.yml
@@ -4,6 +4,7 @@ on:
   schedule:
     # This schedule is set to run at 00:00 UTC every monday
     - cron: '0 0 * * 1'
+  workflow_dispatch:
 
 jobs:
   run-update:
