--- a/.github/workflows/scheduled-build-2.x.yml
+++ b/.github/workflows/scheduled-build-2.x.yml
@@ -6,6 +6,9 @@ on:
     - cron: '0 0 * * 1'
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   run-update:
     runs-on: ubuntu-latest
@@ -35,7 +38,7 @@ jobs:
         if: steps.git-check.outputs.changes == 'true'
         run: |
           source build/meta.txt
-          git config --local user.email "action@github.com"
+          git config --local user.email "actions@users.noreply.github.com"
           git config --local user.name "Scheduled build"
           git add .
           git commit -m "Scheduled build: List updated"
