--- a/.github/workflows/scheduled-build-2.x.yml
+++ b/.github/workflows/scheduled-build-2.x.yml
@@ -37,11 +37,19 @@ jobs:
       - name: Commit changes
         if: steps.git-check.outputs.changes == 'true'
         run: |
-          source build/meta.txt
           git config --local user.email "actions@users.noreply.github.com"
           git config --local user.name "Scheduled build"
           git add .
           git commit -m "Scheduled build: List updated"
           git push
-          git tag $version
-          git push --tags
+          # version bump
+          BRANCH=$(git rev-parse --abbrev-ref HEAD)
+          if [[ "${BRANCH: -2}" == ".x" ]]
+          then
+            TAGFILTER="${BRANCH:0:-1}"
+            LASTTAG=$(git for-each-ref --sort=creatordate --format '%(refname:short)' refs/tags | grep "^v${TAGFILTER/./\.}" | tail -1)
+            IFS='.' read -r MAJOR MINOR PATCH <<< "${LASTTAG}"
+            NEWTAG="$MAJOR.$MINOR.$((patch + 1))"
+            git tag $NEWTAG
+            git push --tags
+          fi
