--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^3.68",
     "phpstan/phpstan": "^2.1",
-    "phpunit/phpunit": "9.*"
+    "phpunit/phpunit": "^9.6"
   },
   "scripts": {
     "cs": [
